[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kafkatop"
readme = "README.md"
dynamic = ["version"]
description = "A real-time monitoring tool for Apache Kafka that displays consumer lag and event rates"
authors = [
    {name = "Spiros Ioannou"},
]
requires-python = ">=3.9"
dependencies = [
    "confluent-kafka",
    "humanize",
    "rich",
    "readchar",
    "markdown-it-py==3.0.0; python_version == '3.9'",
    "markdown-it-py; python_version >= '3.10'",
]

# For building pex and github runner
[project.optional-dependencies]
dev = [
    "wheel",
    "twine",
    "pytest",
    "coverage",
]

# This is the direct equivalent of 'scripts' needed for pex (-c).
#[project.scripts]
#kafkatop = "kafkatop.py"

[tool.setuptools]
py-modules = ["kafkatop"]


[project.scripts]
kafkatop = "kafkatop:main"

